--- a/Algorithm evaluation/Algo eval.ipynb
+++ b/Algorithm evaluation/Algo eval.ipynb
@@ -556,7 +556,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create a preprocessing lifeline\n"
+    "### Create a preprocessing Pipeline\n"
    ]
   },
   {
